<resources>
    <string name="app_name">HillfortExplorer</string>
    <string name="hint_hillfortTitle">Hillfort Title</string>
    <string name="hint_hillfortDescription">Description</string>
    <string name="hint_hillfortAdditionalNotes">Additional notes</string>
    <string name="menu_addHillfort">Add</string>
    <string name="enter_hillfort_title">Please provide a title and description for the Hillfort</string>
    <string name="save_hillfort">Save</string>
    <string name="menu_deleteHillfort">Delete</string>
    <string name="select_hillfort_image">Select hillfort image</string>
    <string name="select_more_images">Add more images</string>
    <string name="button_addImage">Choose Image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">Map</string>
    <string name="button_removeImage">Remove Image</string>
    <string name="hint_hillfortIsVisited">Visited</string>
    <string name="button_dateVisited">Set Date Visited</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_register">Register User</string>
    <string name="button_login">Login as User</string>
    <string name="enter_user_pass">Please provide a username and password for your user</string>
    <string name="valid_registration">User registered</string>
    <string name="invalid_registration">User not registered. Username already exists in database</string>
    <string name="invalid_login">Cannot login. Invalid username or password.</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="hint_oldUsername">Current username</string>
    <string name="hint_newUsername">New username</string>
    <string name="button_changeUsername">Change Username</string>
    <string name="hint_oldPassword">Current password</string>
    <string name="hint_newPassword">New password</string>
    <string name="button_changePassword">Change Password</string>
    <string name="invalid_oldUsername">Current username is invalid</string>
    <string name="invalid_oldPassword">Current password is invalid</string>
    <string name="valid_changeUsername">Username changed</string>
    <string name="valid_changePassword">Password changed</string>
    <string name="invalid_newUsername">Please provide a new username to change to</string>
    <string name="invalid_newPassword">Please provide a new password to change to</string>
    <string name="duplicate_newUsername">Username already exists in database</string>
    <string name="title_settingsUtilities">Settings</string>
    <string name="title_statistics">User Statistics</string>
    <string name="hint_statistics">Statistics to be displayed here</string>
    <string name="menu_mapOfHillforts">Map</string>
    <string name="title_activity_hillforts_map">Map of Hillforts</string>
    <string name="hillfort_image_placeholder">No image of Hillfort found</string>
    <string name="hillfort_title_placeholder">Hillfort name</string>
    <string name="hillfort_description_placeholder">Hillfort description</string>
    <string name="title_activity_hillfort">Hillfort</string>
    <string name="title_activity_hillfort_list">Hillforts</string>
    <string name="title_activity_settings">Settings</string>
    <string name="favourite_hillfort">Favourite</string>
    <string name="button_directions">Directions</string>
    <string name="menu_shareHillfort">Share</string>
    <string name="action_shareHillfort">I am using the HillfortExplorer app! I found</string>

    <string-array name="rating_options">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
