<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" />
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:orientation="vertical">

            <EditText
                android:id="@+id/oldUsername"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="8dp"
                android:autofillHints=""
                android:hint="@string/hint_oldUsername"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/newUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/hint_newUsername"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <Button
                android:id="@+id/changeUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/colorAccent"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:stateListAnimator="@null"
                android:text="@string/button_changeUsername"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/oldPassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="8dp"
                android:autofillHints=""
                android:hint="@string/hint_oldPassword"
                android:inputType="text|textPassword"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/newPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/hint_newPassword"
                android:inputType="text|textPassword"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <Button
                android:id="@+id/changePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/colorAccent"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:stateListAnimator="@null"
                android:text="@string/button_changePassword"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>